# picqa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run_tests_no_pytest.py
.github/workflows/: ci.yml
configs/: mzm_spec.yaml
docs/: architecture.md  data_format.md  extraction_methods.md  multi_band.md  pn_modulator.md  projects_1_2.md  usage_ko.md
examples/: 01_basic_usage.py  02_batch_analysis.py
results/out_v15/: center_vs_edge_il.csv  fsr_index_variation.csv  iv_uniformity.csv  mzm_features.csv  phase_features.csv  pn_length_fit.csv  pn_segments.csv  report.md  stats_per_session.csv  yield_per_die.csv  yield_per_session.csv  yield_per_wafer.csv
src/picqa/: __init__.py  cli.py
src/picqa/analysis/: __init__.py  outlier.py  phase_extraction.py  statistics.py  wafer_uniformity.py  yield_calc.py
src/picqa/extract/: __init__.py  mzm.py  photodetector.py  pn_modulator.py  waveguide.py
src/picqa/io/: __init__.py  bands.py  pn_parser.py  pn_schemas.py  schemas.py  xml_parser.py
src/picqa/report/: __init__.py  markdown.py
src/picqa/viz/: __init__.py  iv_plot.py  pn_plot.py  spectrum_plot.py  summary_plot.py  uniformity_plot.py  vpi_analysis.py  wafer_map.py
tests/: conftest.py  test_bands.py  test_cli.py  test_extract_mzm.py  test_outlier.py  test_pn_modulator.py  test_statistics.py  test_uniformity_and_phase.py  test_xml_parser.py  test_yield_calc.py
